# libidn2

./: Makefile.am  configure.ac  libidn2.pc.in  myupload.sh  run_configure.sh  test.c  test.cpp  로컬 디스크 (C).lnk
examples/: Makefile.am
fuzz/: Makefile.am
gettext-0.22.5 - 복사본/libtextstyle/: Makefile.am  aclocal.m4  build_output.txt  config.h  config.h.in  config.status  config_h.in  configure  configure.ac  test.c
gettext-0.22.5 - 복사본/libtextstyle/adhoc-tests/: hello.c
gettext-0.22.5 - 복사본/libtextstyle/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.7  output.8  requests  traces.0  traces.1  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
gettext-0.22.5 - 복사본/libtextstyle/examples/color-hello/: hello.c  names.c
gettext-0.22.5 - 복사본/libtextstyle/gnulib-local/lib/: fd-ostream.oo.c  glibconfig.in.h  html-styled-ostream.oo.h  iconv-ostream.oo.c  term-ostream.oo.c  term-ostream.oo.h
gettext-0.22.5 - 복사본/libtextstyle/gnulib-local/tests/: test-moo-aroot.oo.c  test-moo-asub1.oo.c  test-moo-sub1.oo.c  test-moo-sub2.oo.c
gettext-0.22.5 - 복사본/libtextstyle/lib/: color.c  color.h  concat-filename.h  error.c  exitfail.h  fd-ostream.oo.h  fnmatch.c  get_ppid_of.c  gettext.h  inttypes.in.h  itold.c  limits.in.h  memory-ostream.h  misc.c  misc.h  obstack.c  ostream.oo.h  pathmax.h  sig-handler.h  signbitd.c  size_max.h  stat-w32.h  stdio-write.c  string.h  string.in.h  sys_socket.c  term-ostream.c  term-ostream.h  term-ostream.oo.c  term-ostream.oo.c-백업  term-ostream.oo.h  term-style-control.c  term-style-control.h  term_ostream.priv.h  textstyle.h  textstyle.in.h  time.in.h  unitypes.h  vasprintf.c  wchar.in.h  (+1 more)
gettext-0.22.5 - 복사본/libtextstyle/lib/glib/: gstring.h  gtypes.in.h
gettext-0.22.5 - 복사본/libtextstyle/lib/libcroco/: cr-num.c  cr-om-parser.c  cr-parser.h  cr-tknzr.h  cr-token.h
gettext-0.22.5 - 복사본/libtextstyle/lib/libxml/: HTMLtree.h  SAX.c  SAX2.c  catalog.c  globals.in.h  hash.c  nanohttp.in.h  parser.in.h  schemasInternals.h  schematron.in.h  threads.h  threads.in.h  xlink.c  xmlreader.h  xmlschemas.h  xpathInternals.h  xpathInternals.in.h  xpointer.c  xpointer.in.h
gettext-0.22.5 - 복사본/libtextstyle/lib/textstyle/: version.h  version.in.h
gettext-0.22.5 - 복사본/libtextstyle/m4/: .cvsignore
gettext-0.22.5 - 복사본/libtextstyle/tests/: _Noreturn.h  arg-nonnull.h  dummy.c
gettext-0.22.5 - 복사본/libtextstyle/동적/: config.h
gettext-0.22.5 - 복사본/libtextstyle/백업/lib/: Makefile.am  color.c  exported.sh  fatal-signal.h  fcntl.h  fd-ostream.c  gl_list.h  ialloc.h  intprops.h  inttypes.h  log10.c  noop-styled-ostream.c  ostream.oo.h  ostream.priv.h  same-inode.c  sockets.h  stdint.h  string.h  sys_uio.in.h  term-ostream.h  term-ostream.oo.c  term-style-control.h  term-styled-ostream.c  term_ostream.priv.h  term_ostream.vt.h  term_styled_ostream.vt.h  time.h  unistr.in.h  unreachable.h  vasnprintf.h  windows-mutex.c  windows-once.c  windows-once.h  windows-recmutex.c  windows-rwlock.h  xgethostname.c  xstrdup.h  xvasprintf.c
gettext-0.22.5 - 복사본/libtextstyle/백업/m4/: gnulib-comp.m4
gettext-0.22.5/libtextstyle/: .bashrc  ChangeLog  Makefile.am  aclocal.m4  bashrc.txt  config.h  config.h.in  config.site  config.status  config_h_h.in  configure  configure.ac  configure.ac_back20241014.ac  libtextstyle-config.h  libtool
gettext-0.22.5/libtextstyle/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.0t  traces.1  traces.2  traces.3  traces.4
gettext-0.22.5/libtextstyle/build-aux/m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-0.22.5/libtextstyle/code_test/: GCC_info - 복사본.cpp  GCC_info.cpp  c17_test.c  check_io_h.sh  configure.ac_sample  encoding_utf8.cpp  find_config.cpp  ignored_macros.txt  macro_calls.txt  test_output.c
gettext-0.22.5/libtextstyle/doc/: Makefile.am
gettext-0.22.5/libtextstyle/examples/color-filter/: filter.c
gettext-0.22.5/libtextstyle/gnulib-local/lib/: html-ostream.oo.c  ostream.oo.c
gettext-0.22.5/libtextstyle/gnulib-local/tests/: test-moo-aroot.oo.h  test-moo-assign.c  test-moo-asub1.oo.h  test-moo-root.oo.c  test-moo-root.oo.h  test-moo-sub1.oo.h  test-moo-sub2.oo.h  test-term-ostream.c
gettext-0.22.5/libtextstyle/gnulib-m4/: gnulib-comp - 복사본.m4  gnulib-comp.m4
gettext-0.22.5/libtextstyle/lib/: .bashrcnew  .cvsignore  Makefile.am  Makefile.gnulib  af_alg.h  argz.c  argz.h  argz.h.bak  argz.h.in  close-stream.h  color.h  errno.h  error.in.h  exitfail.h  exported.sh  fbufmode.h  file_ostream.vt.h  fprintftime.h  freadseek.h  fwriteerror.h  getndelim2.h  getnline.h  getopt.in.h  gettimeofday.c  gl_array_list.h  html_styled_ostream.vt.h  isnanf-nolibm.h  libcroco_rpl.la  limits.h  linebuffer.h  localename-unsafe.c  md2.h  md4.h  ostream.priv.h  printf-frexp.c  printf-frexpl.h  readtokens.h  readtokens0.h  regex_internal.h  renameatu.h  (+22 more)
gettext-0.22.5/libtextstyle/lib/glib/: gprimes.h  gprintfint.h  gprintfint.in.h  gtypes.h
gettext-0.22.5/libtextstyle/lib/libcroco/: cr-sel-eng.h  cr-statement.h
gettext-0.22.5/libtextstyle/lib/libxml/: catalog.h  dict.c  entities.h  nanohttp.c  pattern.c  relaxng.c  timsort.h  valid.in.h  xmlIO.c  xmlerror.in.h  xmlmodule.c  xmlschemas.c  xmlschemastypes.h
gettext-0.22.5/libtextstyle/lib/sys - 복사본/: socket.h  time.h
gettext-0.22.5/libtextstyle/lib/textstyle/: version.h  woe32dll.in.h
gettext-0.22.5/libtextstyle/libltdl/: config.status  libtool
gettext-0.22.5/libtextstyle/libltdl/autom4te.cache/: output.1  output.5  output.6  output.7  requests  traces.3  traces.5  traces.6  traces.7
gettext-0.22.5/libtextstyle/log/: alllog.txt
gettext-0.22.5/libtextstyle/m4/: .cvsignore  getdomainname.m4  gnulib-cache.m4  gnulib-comp.m4  netdb_h.m4  non-recursive-gnulib-prefix-hack.m4
gettext-0.22.5/libtextstyle/po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in
gettext-0.22.5/libtextstyle/tests/: Makefile.gnulib  c++defs.h  test-memory-ostream.c  test-netdb.c  warn-on-use.h
gettext-0.22.5/libtextstyle/동적/: Makefile.am  configure.ac
gettext-0.22.5/libtextstyle/백업/: bashrc.txt
gettext-0.22.5/libtextstyle/백업/lib/: idx.h  (+52 more)
(+537 files in other folders)
