# examples 디렉토리의 Makefile.am
bin_PROGRAMS = example-toascii example-tounicode lookup
example_toascii_SOURCES = example-toascii.c
example_tounicode_SOURCES = example-tounicode.c
lookup_SOURCES = lookup.c

example_toascii_LDADD = ../lib/libidn2.la
example_tounicode_LDADD = ../lib/libidn2.la
lookup_LDADD = ../lib/libidn2.la
